--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Art</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div class="container-fluid">
         <header class="row" id="header">
             <div class="logo-container">
-                <img src="img/art_logo.svg" alt="Art" id="logo">
+                <img src="img/art_logo.svg" class="logo" alt="Art" id="logo">
                 <h1>Art</h1>
             </div>
             <p>Exibições de arte urbana</p>
@@ -55,7 +55,7 @@
                 <a href="#" class="btn">Detalhes</a>
             </div>
             <div class="col-12 col-md-6">
-                <div class="small-image-container center-image" id="img4"></div>
+                <div class="small-image-container center-image img4" id="img4"></div>
                 <h3>Obra de Artur</h3>
                 <p class="secondary-color">Realizada em: 26/01/2018</p>
                 <a href="#" class="btn">Detalhes</a>
